@@ -10,6 +10,11 @@
 #
 # X Input method setup script
 
+function run_imsettings() {
+    which imsettings-start > /dev/null 2>&1 && LANG="$tmplang" imsettings-start -n "$IMSETTINGS_MODULE" || :
+    which imsettings-xim > /dev/null 2>&1 && imsettings-xim &
+}
+
 USER_XINPUTRC="$HOME/.xinputrc"
 SYS_XINPUTRC="@XINPUTRC_PATH@/xinputrc"
 
@@ -58,10 +63,16 @@ export GTK_IM_MODULE
 XMODIFIERS="@im=imsettings"
 export XMODIFIERS
 
-which imsettings-xim > /dev/null 2>&1 && imsettings-xim || :
-
 # start IM via imsettings
 IMSETTINGS_MODULE=${SHORT_DESC:-${XIM}}
 [ -z "$IMSETTINGS_MODULE" ] && IMSETTINGS_MODULE="none"
 # NOTE: Please make sure the session bus is established before running this script.
-which imsettings-start > /dev/null 2>&1 && LANG="$tmplang" imsettings-start -n "$IMSETTINGS_MODULE" || :
+if [ -n "$DBUS_SESSION_BUS_ADDRESS" ]; then
+    # Yes, we are in the dbus session
+    run_imsettings
+else
+    # We may need a hack to slip into the dbus session.
+    echo "***"
+    echo "*** No DBus session hasn't been established yet. giving up to deal with Input Method with imsettings."
+    echo "***"
+fi
